--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,51 +1,44 @@
+---
 ru:
-  en: Английский
-  ru: Русский
   activerecord:
+    attributes:
+      answer:
+        body: Текст
+        question: Вопрос
+      question:
+        body: Текст
+        title: Заголовок
+      user:
+        created_at: Создан
+        email: "Эл. почта"
+        name: Имя
+        old_password: "Старый пароль"
+        password: Пароль
+        password_confirmation: "Подтверждение пароля"
+        updated_at: Обновлен
     models:
       question: Вопрос
-    attributes:
-      question:
-        title: Заголовок
-        body: Текст
-      answer:
-        title: Заголовок
-        body: Текст
-      user:
-        email: Эл. почта
-        password: Пароль
-        password_confirmation: Подтверждение пароля
-        name: Имя
-        old_password: Старый пароль
   admin:
     users:
+      create:
+        success: "Пользователи импортированы!"
       index:
-        title: Управление пользователями
-        download_zipped: Загрузить архив XLSX
+        download_zipped: "Загрузить архив XLSX"
+        title: "Управление пользователями"
         upload_form:
-          select_archive: Выберите архив
+          select_archive: "Выберите архив"
           submit: Загрузить!
-        upload_zipped: Загрузить пользователей из XLSX
-  pages:
-    index:
-      title: Добро пожловть в AskIt!
-  menu:
-    home: Главная
-    questions: Вопросы
-    edit_profile: Изм. профиль
-    log_out: Выйти
-    sing_up: Регистрация
-    log_in: Войти
-    users: Пользователи
+        upload_zipped: "Загрузить пользователей из XLSX"
   answers:
-    edit:
-      title: Изменить ответ
     create:
-      success: Ответ создан!
+      success: "Ответ создан!"
     destroy:
-      success: Ответ удалён!
+      success: "Ответ удалён!"
+    edit:
+      title: "Изменить ответ"
     update:
-      success: Ответ обновлён!
+      success: "Ответ обновлён!"
+  en: Английский
   global:
     button:
       delete: Удалить
@@ -53,48 +46,64 @@ ru:
       show: Показать
       submit: Отправить!
     dialog:
-      you_sure: Вы уверены?
+      you_sure: "Вы уверены?"
+    flash:
+      already_signed_in: "Вы уже вошли в систему!"
+      not_signed_in: "Войдите в систему!"
     text:
-      omission: ... (далее)
-    forms:
-      register: Регистрация
-      save: Сохранить
-  questions:
-    destroy:
-      success: Вопрос удалён!
-    create:
-      success: Вопрос создан!
-    edit:
-      title: Редактировать вопрос
+      omission: "... (далее)"
+  menu:
+    edit_profile: "Изм. профиль"
+    home: Главная
+    log_in: Войти
+    log_out: Выйти
+    questions: Вопросы
+    sing_up: Регистрация
+    users: Пользователи
+  pages:
     index:
-      new: Новый вопрос
+      title: "Добро пожловть в AskIt!"
+  questions:
+    create:
+      success: "Вопрос создан!"
+    destroy:
+      success: "Вопрос удалён!"
+    edit:
+      title: "Редактировать вопрос"
+    index:
+      new: "Новый вопрос"
       title: Вопросы
     new:
-      title: Новый вопрос
+      title: "Новый вопрос"
     show:
       answers: Ответы
-      write_answer: Напишите свой ответ
+      write_answer: "Напишите свой ответ"
     update:
-      success: Вопрос обновлён!
+      success: "Вопрос обновлён!"
+  ru: Русский
   sessions:
-    new:
-      title: Войти
-      form:
-        email: Эл. почта
-        password: Пароль
-        remember_me: Запомнить меня
-        submit: Войти!
     create:
-      success: Рады видеть снова, %{name}!
-      warning: Неправильная почта и/или пароль!
+      success: "Рады видеть снова, %{name}!"
+      warning: "Неправильная почта и/или пароль!"
     destroy:
-      success: Увидимся снова!
+      success: "Увидимся снова!"
+    new:
+      form:
+        email: "Эл. почта"
+        password: Пароль
+        remember_me: "Запомнить меня"
+        submit: Войти!
+      title: Войти
   users:
-    update:
-      success: Ваш профиль успешно обновлён!
     create:
-      success: Добро пожаловать в AskIt, %{name}!
+      success: "Добро пожаловать в AskIt, %{name}!"
     edit:
-      title: Редактировать профиль
+      title: "Редактировать профиль"
+    global:
+      forms:
+        register: Регистрация
+        save: Сохранить
     new:
       title: Регистрация
+    update:
+      success: "Ваш профиль успешно обновлён!"
