locales for roles and actions with user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,7 @@ en:
         old_password: "Old password"
         password: Password
         password_confirmation: "Password confirmation"
+        role: Role
         updated_at: "Updated at"
     models:
       question: Question
@@ -26,6 +27,10 @@ en:
     users:
       create:
         success: "Users imported!"
+      destroy:
+        success: "User destroyed!"
+      edit:
+        title: "Edit user"
       index:
         download_zipped: "Download zipped XLSX"
         title: "Admin Users"
@@ -33,6 +38,8 @@ en:
           select_archive: "Select archive"
           submit: Upload!
         upload_zipped: "Upload users from XLSX"
+      update:
+        success: "User updated!"
   answers:
     create:
       success: "Answer created!"
@@ -61,6 +68,11 @@ en:
       not_signed_in: "You are not signed in!"
     text:
       omission: "... (continued)"
+    user:
+      roles:
+        admin: Admin
+        basic: Basic
+        moderator: Moderator
   menu:
     edit_profile: "Edit profile"
     home: Home
