--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,9 +24,14 @@ ru:
     models:
       question: Вопрос
   admin:
+    user_mailer:
+      bulk_import_done:
+        subject: "Импорт пользователей завершён | AskIt"
+      bulk_import_fail:
+        subject: "Импорт пользователей завершился с ошибкой | AskIt"
     users:
       create:
-        success: "Пользователи импортированы!"
+        success: "Вы получите электронное письмо, как только операция завершится"
       destroy:
         success: "Пользователь удалён!"
       edit:
