add email validator and use it instead of valid_email2 gem

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,6 +82,8 @@ en:
         admin: Admin
         basic: Basic
         moderator: Moderator
+    errors:
+      invalid_format: has invalid format
   menu:
     edit_profile: "Edit profile"
     home: Home
