--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -71,6 +71,8 @@ ru:
       submit: Отправить!
     dialog:
       you_sure: "Вы уверены?"
+    errors:
+      invalid_format: "имеет неправильный формат"
     flash:
       already_signed_in: "Вы уже вошли в систему!"
       not_authorized: "У вас нет прав на выполнение этого действия!"
@@ -82,8 +84,6 @@ ru:
         admin: Админ
         basic: Базовый
         moderator: Модератор
-    errors:
-      invalid_format: имеет неправильный формат
   menu:
     edit_profile: "Изм. профиль"
     home: Главная
